--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -115,8 +115,6 @@
             margin: 0;
             flex: 1 1 0;
             padding-top: 1rem;
-            max-width: 11rem;
-            min-width: 0;
             font-size: 15px;
         }
 
@@ -128,13 +126,13 @@
             background-color: #3b3b3b;
             border: 0.1875em double #4a4a4a;
             border-radius: 0.75em;
-            padding: 0.5em 0.5em;
+            /* padding: 0.5em 0.5em; */
             box-shadow: inset 0 0.125em 0.25em rgba(255, 255, 255, 0.1), inset 0 -0.125em 0.25em rgba(0, 0, 0, 0.3);
         }
 
         .nickname-input {
-            width: 30%;
-            font-size: 1em;
+            width: 40%;
+            font-size: 0.8em;
             text-align: center;
             border: none;
             background: transparent;
@@ -266,7 +264,7 @@
             align-items: center;
             gap: 0.2em;
             flex-shrink: 0;
-            font-size: 25px;
+            font-size: 20px;
         }
 
         .checker-options {
@@ -320,7 +318,7 @@
             gap: 0.2em;
             color: white;
             flex-shrink: 0;
-            font-size: 25px;
+            font-size: 20px;
         }
 
         .bar-options {
@@ -807,7 +805,6 @@
             display: flex;
             align-items: center;
             flex-direction: row;
-            gap: 0.5rem;
         }
         .score-inputs-container {
             display: flex;
@@ -815,9 +812,10 @@
             flex-direction: row;
             gap: 0.5rem;
         }
-        .nickname-inputs-container-wrapper{
-            display:flex;
+        .nickname-inputs-container-wrapper {
+            display: flex;
             flex-direction: row;
+            gap: 0.3rem;
         }
         .nickname-inputs-container-wrapper-inner{
             display:flex;
